# PathComparator

./: .gitignore  CMakeLists.txt  README.md
inc/: CreateTestEnv.hpp  PathComparator.hpp
res/: env1_dir.txt  env1_dir_structure.txt  env1_tree_structure.txt  env2_dir.txt  env2_dir_structure.txt  env2_tree_structure.txt
src/: CreateTestEnv.cpp  PathComparator.cpp  main.cpp
